Basic sending of smtp emails upon user registration

--- a/internal/mailer/templates/user_welcome.tmpl
+++ b/internal/mailer/templates/user_welcome.tmpl
@@ -1,11 +1,11 @@
-{{define "plainbody"}} Welcome to Movie Buff! {{end}}
+{{define "subject"}} Welcome to Movie Buff! {{end}}
 
 {{define "plainbody"}}
 Hi,
 
 Thanks for signing up for the movie buff api, we're excited to have you board!
 
-Please reach out to us at {{.EMAIL}} if you have any questions!
+Please reach out to us at support@moviebuff.com if you have any questions!
 
 Thanks,
 
@@ -22,8 +22,9 @@ The movie buff team
 <body>
     <p>Hi,</p>
     <p>Thanks for signing up for the movie buff api, we're excited to have you board!</p>
-    <p>Please reach out to us at {{.EMAIL}} if you have any questions!</p>
+    <p>Please reach out to us at support@moviebuff.com if you have any questions!</p>
     <p>Thanks,</p>
     <p>The movie buff team</p>
 </body>
 </html>
+{{end}}
